Minor bug fixes and some documentation for Go
