# server/app/src/go/docs/swagger.yaml
@@ -4,11 +4,6 @@ definitions:
       topic:
         type: string
     type: object
-  skills.DeleteSkillRequest:
-    properties:
-      topic:
-        type: string
-    type: object
   skills.UpdateSkillRequest:
     properties:
       oldTopic:
@@ -93,47 +88,6 @@ paths:
       tags:
       - Users
   /skill:
-    delete:
-      consumes:
-      - application/json
-      description: Delete a skill for a user
-      parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        type: string
-      - description: Skill topic to delete
-        in: body
-        name: skill
-        required: true
-        schema:
-          $ref: '#/definitions/skills.DeleteSkillRequest'
-      responses:
-        "204":
-          description: No Content
-      summary: Delete a skill
-      tags:
-      - Skills
-    get:
-      description: Get all skills for a user
-      parameters:
-      - description: User ID
-        in: query
-        name: user_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              type: string
-            type: array
-      summary: Get skills by user id
-      tags:
-      - Skills
     post:
       consumes:
       - application/json
@@ -174,6 +128,48 @@ paths:
         "204":
           description: No Content
       summary: Update a skill
+      tags:
+      - Skills
+  /skill/:topic:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a skill for a user
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        type: string
+      - description: Skill topic to delete
+        in: path
+        name: topic
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+      summary: Delete a skill
+      tags:
+      - Skills
+  /skill/{user_id}:
+    get:
+      description: Get all skills for a user
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: string
+            type: array
+      summary: Get skills by user id
       tags:
       - Skills
   /user:
