# server/app/src/go/skills/skillTypes.go
@@ -9,10 +9,6 @@ type CreateSkillRequest struct {
 	Topic string `json:"topic"`
 }
 
-type DeleteSkillRequest struct {
-	Topic string `json:"topic"`
-}
-
 type UpdateSkillRequest struct {
 	OldTopic    string `json:"oldTopic"`
 	UpdatedTopic string `json:"updatedTopic"`
